[project]
name = "bio-bridge"
version = "0.1.0"
description = "Zepp/Amazfit health-data sync sidecar: extract, normalize, and forward your wearable data to your own endpoint."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.5",
    "click>=8.1",
]

[project.scripts]
bio-bridge = "bio_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bio_bridge"]
